[gd_scene load_steps=7 format=2]

[ext_resource path="res://img/Mahal props (inside).png" type="Texture" id=1]
[ext_resource path="res://entities/MahalPropsID.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 15 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23, 20 )

[node name="MahalPropsID" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 3

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Collision2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="Collision3" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="Collision4" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
disabled = true
